# api/openapi.yaml
@@ -3,6 +3,28 @@ info:
   version: 1.0.0
   title: Quote API server
 paths:
+  /authors:
+    post:
+      requestBody:
+        description: Create an author
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAuthorRequest'
+        required: true
+      responses:
+        '200':
+          description: post author response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateAuthorResponse'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /quotes:
     post:
       requestBody:
@@ -14,7 +36,7 @@ paths:
         required: true
       responses:
         '200':
-          description: pet response
+          description: post quote response
           content:
             application/json:
               schema:
@@ -27,11 +49,33 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
-    BaseQuote:
+    CreateAuthorRequest:
       type: object
+      properties:
+        name:
+          type: string
+          minLength: 1
+          example: Charles Dickens
       required:
-        - text
-        - author_id
+        - name
+    CreateAuthorResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          minLength: 36
+          maxLength: 36
+          example: 4357ac30-5cb3-48d3-8f97-456187004d8b
+        name:
+          type: string
+          minLength: 1
+          example: Charles Dickens
+      required:
+        - id
+        - name
+    CreateQuoteRequest:
+      type: object
       properties:
         text:
           type: string
@@ -43,22 +87,32 @@ components:
           minLength: 36
           maxLength: 36
           example: 4357ac30-5cb3-48d3-8f97-456187004d8b
-    CreateQuoteRequest:
-      allOf:
-        - $ref: '#/components/schemas/BaseQuote'
+      required:
+        - text
+        - author_id
     CreateQuoteResponse:
-      allOf:
-        - $ref: '#/components/schemas/BaseQuote'
-        - type: object
-          properties:
-            creator_id:
-              type: string
-              format: uuid
-              minLength: 36
-              maxLength: 36
-              example: 4357ac30-5cb3-48d3-8f97-456187004d8b
-          required:
-            - creator_id
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          minLength: 36
+          maxLength: 36
+          example: 4357ac30-5cb3-48d3-8f97-456187004d8b
+        text:
+          type: string
+          minLength: 1
+          example: hard work pays off
+        author_id:
+          type: string
+          format: uuid
+          minLength: 36
+          maxLength: 36
+          example: 4357ac30-5cb3-48d3-8f97-456187004d8b
+      required:
+        - id
+        - text
+        - author_id
     Detail:
       type: object
       properties:
