# internal/repository/types.go
@@ -7,14 +7,6 @@ import (
 	"github.com/uptrace/bun"
 )
 
-type User struct {
-	bun.BaseModel `bun:"table:users,alias:u"`
-	ID            uuid.UUID `bun:",pk,type:uuid,notnull"`
-	Username      string    `bun:",notnull"`
-	CreatedAt     time.Time `bun:",notnull"`
-	UpdatedAt     time.Time `bun:",notnull"`
-}
-
 type Author struct {
 	bun.BaseModel `bun:"table:authors,alias:a"`
 	ID            uuid.UUID `bun:",pk,type:uuid,notnull"`
@@ -24,11 +16,12 @@ type Author struct {
 }
 
 type Quote struct {
-	bun.BaseModel `bun:"table:quotes,alias:q"`
-	ID            uuid.UUID `bun:",pk,type:uuid,notnull"`
-	Text          string    `bun:",notnull"`
-	*Author       `bun:",notnull,rel:belongs-to,join:author_id=id"`
-	*User         `bun:",notnull,rel:belongs-to,join:creator_user_id=id"`
-	CreatedAt     time.Time `bun:",notnull"`
-	UpdatedAt     time.Time `bun:",notnull"`
+	bun.BaseModel   `bun:"table:quotes,alias:q"`
+	ID              uuid.UUID `bun:",pk,type:uuid,notnull"`
+	Text            string    `bun:",notnull"`
+	AuthorID        uuid.UUID
+	Author          *Author   `bun:",rel:belongs-to,join:author_id=id"`
+	CreatorUsername string    `bun:",notnull"`
+	CreatedAt       time.Time `bun:",notnull"`
+	UpdatedAt       time.Time `bun:",notnull"`
 }
